--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="header-logo row">
       <div class="container">
 
-        <div class="header-logo__title">КиноЗал</div>
+        <strong class="header-logo__title">КиноЗал</strong>
         <div class="header-logo__text">Найди свое кино</div>
 
       </div>
@@ -47,7 +47,7 @@
 
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="navbar-top">
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav navbar-left">
               <li class="active"><a href="#">Главная <span class="sr-only">(current)</span></a></li>
               <li><a href="#">Фильмы</a></li>
               <li><a href="#">Сериалы</a></li>
