--- a/index.html
+++ b/index.html
@@ -66,6 +66,50 @@
 
   </header>
 
+  <div class="container">
+    <div class="row">
+      <main class="main col-lg-9 col-md-8 col-sm-12 col-lg-push-3 col-md-push-4">MAIN</main>
+      <aside class="left-sidebar col-lg-3 col-md-4 col-sm-12 col-lg-pull-9 col-md-pull-8">
+
+        <div class="vertical-slider panel panel-info">
+          <div class="panel-heading">КАРУСЕЛЬ</div>
+          <div class="panel-body">
+            Panel content
+          </div>
+        </div>
+
+        <div class="site-search panel panel-info">
+          <div class="panel-heading">ПОИСК</div>
+          <div class="panel-body">
+            Panel content
+          </div>
+        </div>
+
+        <div class="user-login panel panel-info">
+          <div class="panel-heading">ВХОД</div>
+          <div class="panel-body">
+            Panel content
+          </div>
+        </div>
+
+        <div class="site-news panel panel-info">
+          <div class="panel-heading">НОВОСТИ САЙТА</div>
+          <div class="panel-body">
+            Panel content
+          </div>
+        </div>
+
+        <div class="top-films panel panel-info">
+          <div class="panel-heading">РЕЙТИНГ ФИЛЬМОВ</div>
+          <div class="panel-body">
+            Panel content
+          </div>
+        </div>
+
+      </aside>
+    </div>
+  </div>
+
   <script src="libs/jquery/dist/jquery.min.js"></script>
   <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
