--- a/index.html
+++ b/index.html
@@ -72,35 +72,138 @@
       <aside class="left-sidebar col-lg-3 col-md-4 col-sm-12 col-lg-pull-9 col-md-pull-8">
 
         <div class="vertical-slider panel panel-info">
-          <div class="panel-heading">КАРУСЕЛЬ</div>
-          <div class="panel-body">
-            Panel content
+          <!-- SLIDER-BLOCK-START -->
+          <div id="vertical-carousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+              <li data-target="#vertical-carousel" data-slide-to="0" class="active"></li>
+              <li data-target="#vertical-carousel" data-slide-to="1"></li>
+              <li data-target="#vertical-carousel" data-slide-to="2"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+
+              <div class="item active">
+                <img src="assets/img/films/1266931.jpg" alt="image1">
+              </div>
+
+              <div class="item">
+                <img src="assets/img/films/1289488.jpg" alt="image2">
+              </div>
+
+              <div class="item">
+                <img src="assets/img/films/1341151.jpg" alt="image3">
+              </div>
+
+            </div>
+
+            <!-- Controls -->
+            <a class="left carousel-control" href="#vertical-carousel" role="button" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#vertical-carousel" role="button" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
           </div>
+          <!-- SLIDER-BLOCK-END -->
+
         </div>
 
         <div class="site-search panel panel-info">
-          <div class="panel-heading">ПОИСК</div>
+          <div class="panel-heading">Поиск</div>
           <div class="panel-body">
-            Panel content
+            <form action="search">
+              <div class="input-group input-group-lg">
+                <input class="form-control" type="text" placeholder="Поиск по сайту">
+                <span class="input-group-btn">
+                  <button class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                  </button>
+                </span>
+
+              </div>
+            </form>
           </div>
         </div>
 
         <div class="user-login panel panel-info">
-          <div class="panel-heading">ВХОД</div>
+          <div class="panel-heading">Вход</div>
           <div class="panel-body">
-            Panel content
+            <form action="login">
+              <div class="form-group form-group-lg">
+                <input class="form-control" type="text" placeholder="Логин">
+              </div>
+              <div class="form-group form-group-lg">
+                <input class="form-control" type="password" placeholder="Пароль">
+              </div>
+              <button class="btn btn-default btn-lg btn-block">Вход</button>
+
+            </form>
           </div>
         </div>
 
+
         <div class="site-news panel panel-info">
-          <div class="panel-heading">НОВОСТИ САЙТА</div>
+          <div class="panel-heading">Новости сайта</div>
           <div class="panel-body">
-            Panel content
+
+            <div class="site-news-item">
+              <a href="#">
+                <div class="site-news-item__image thumbnail"><img src="assets/img/75x75.png" alt="картинка"></div>
+                <div class="site-news-item__title">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Optio neque iste consectetur eum! Animi, repudiandae.</div>
+                <div class="site-news-item__day">5 мая 2020</div>
+              </a>
+            </div>
+
+            <div class="site-news-item">
+              <a href="#">
+                <div class="site-news-item__image thumbnail"><img src="assets/img/75x75.png" alt="картинка"></div>
+                <div class="site-news-item__title">Lorem, ipsum dolor sit amet consectetur adipisicing
+                  elit.
+                  Optio neque iste consectetur eum! Animi, repudiandae.</div>
+                <div class="site-news-item__day">5 мая 2020</div>
+              </a>
+            </div>
+
+            <div class="site-news-item">
+              <a href="#">
+                <div class="site-news-item__image thumbnail"><img src="assets/img/75x75.png" alt="картинка"></div>
+                <div class="site-news-item__title">Lorem, ipsum dolor sit amet consectetur adipisicing
+                  elit. Optio neque iste consectetur eum! Animi, repudiandae.</div>
+                <div class="site-news-item__day">5 мая 2020</div>
+              </a>
+            </div>
+
+            <div class="site-news-item">
+              <a href="#">
+                <div class="site-news-item__image thumbnail"><img src="assets/img/75x75.png" alt="картинка"></div>
+                <div class="site-news-item__title">Lorem, ipsum dolor sit amet consectetur adipisicing
+                  elit. Optio neque iste consectetur eum! Animi, repudiandae.</div>
+                <div class="site-news-item__day">5 мая 2020</div>
+              </a>
+            </div>
+
+            <div class="site-news-item">
+              <a href="#">
+                <div class="site-news-item__image thumbnail"><img src="assets/img/75x75.png" alt="картинка">
+                </div>
+                <div class="site-news-item__title">Lorem, ipsum dolor sit amet consectetur
+                  adipisicing
+                  elit. Optio neque iste consectetur eum! Animi, repudiandae.</div>
+                <div class="site-news-item__day">5 мая 2020</div>
+              </a>
+            </div>
+
+
+
           </div>
         </div>
 
         <div class="top-films panel panel-info">
-          <div class="panel-heading">РЕЙТИНГ ФИЛЬМОВ</div>
+          <div class="panel-heading">Рейтинг фильмов</div>
           <div class="panel-body">
             Panel content
           </div>
@@ -112,6 +215,7 @@
 
   <script src="libs/jquery/dist/jquery.min.js"></script>
   <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
