--- a/index.html
+++ b/index.html
@@ -197,15 +197,82 @@
               </a>
             </div>
 
-
-
           </div>
         </div>
 
         <div class="top-films panel panel-info">
           <div class="panel-heading">Рейтинг фильмов</div>
           <div class="panel-body">
-            Panel content
+            <ul class="top-films__list list-group">
+
+              <li class="top-films__item list-group-item">
+                <a href="#">
+                  Марсианин
+                  <span class="top-films__badge badge">8.2</span>
+                </a>
+              </li>
+              <li class="top-films__item list-group-item">
+                <a href="#">
+                  Иллюзия обмана 2
+                  <span class="top-films__badge badge">8.0</span>
+                </a>
+              </li>
+              <li class="top-films__item list-group-item">
+                <a href="#">
+                  Из Машины
+                  <span class="top-films__badge badge">8.5</span>
+                </a>
+              </li>
+              <li class="top-films__item list-group-item">
+                <a href="#">
+                  Люси
+                  <span class="top-films__badge badge">7.6</span>
+                </a>
+              </li>
+              <li class="top-films__item list-group-item">
+                <a href="#">
+                  Выхода нет
+                  <span class="top-films__badge badge">7.2</span>
+                </a>
+              </li>
+              <li class="top-films__item list-group-item">
+                <a href="#">
+                  Стражи Галактики
+                  <span class="top-films__badge badge">7.5</span>
+                </a>
+              </li>
+              <li class="top-films__item list-group-item">
+                <a href="#">
+                  Человек муравей
+                  <span class="top-films__badge badge">7.0</span>
+                </a>
+              </li>
+              <li class="top-films__item list-group-item">
+                <a href="#">
+                  Месть от кутюр
+                  <span class="top-films__badge badge">7.1</span>
+                </a>
+              </li>
+              <li class="top-films__item list-group-item">
+                <a href="#">
+                  Люди Икс
+                  <span class="top-films__badge badge">8.3</span>
+                </a>
+              </li>
+              <li class="top-films__item list-group-item">
+                <a href="#">
+                  Занесло
+                  <span class="top-films__badge badge">8.0</span>
+                </a>
+              </li>
+              <li class="top-films__item list-group-item">
+                <a href="#">
+                  Дочь Бога
+                  <span class="top-films__badge badge">7.2</span>
+                </a>
+              </li>
+
+            </ul>
           </div>
         </div>
 
