--- a/index.html
+++ b/index.html
@@ -68,10 +68,194 @@
 
   <div class="container">
     <div class="row">
-      <main class="main col-lg-9 col-md-8 col-sm-12 col-lg-push-3 col-md-push-4">MAIN</main>
+      <main class="main col-lg-9 col-md-8 col-sm-12 col-lg-push-3 col-md-push-4">
+
+        <div class="site-search panel panel-info hidden-lg hidden-md">
+          <div class="panel-heading">Поиск</div>
+          <div class="panel-body">
+            <form action="search">
+              <div class="input-group input-group-lg">
+                <input class="form-control" type="text" placeholder="Поиск по сайту">
+                <span class="input-group-btn">
+                  <button class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                  </button>
+                </span>
+
+              </div>
+            </form>
+          </div>
+        </div>
+
+        <div class="user-login panel panel-info hidden-lg hidden-md">
+          <div class="panel-heading">Вход</div>
+          <div class="panel-body">
+            <form action="login">
+              <div class="form-group form-group-lg">
+                <input class="form-control" type="text" placeholder="Логин">
+              </div>
+              <div class="form-group form-group-lg">
+                <input class="form-control" type="password" placeholder="Пароль">
+              </div>
+              <button class="btn btn-default btn-lg btn-block">Вход</button>
+
+            </form>
+          </div>
+        </div>
+        <!-- MAIN-START -->
+        <section class="new-films">
+          <h1>Новые фильмы</h1>
+          <div class="new-films-row row">
+
+            <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="new-films-item__thumbnail thumbnail">
+                <a href="#" class="new-films-item__link">
+                  <img src="assets/img/films/1263242.jpg" alt="картинка" class="new-film-item__image">
+                  <div class="new-films-item__caption caption">
+                    <h3 class="new-films-item__title">Люси</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+            <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="new-films-item__thumbnail thumbnail">
+                <a href="#" class="new-films-item__link">
+                  <img src="assets/img/films/1266931.jpg" alt="картинка" class="new-film-item__image">
+                  <div class="new-films-item__caption caption">
+                    <h3 class="new-films-item__title">Стражи галактики</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+
+            <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="new-films-item__thumbnail thumbnail">
+                <a href="#" class="new-films-item__link">
+                  <img src="assets/img/films/1289488.jpg" alt="картинка" class="new-film-item__image">
+                  <div class="new-films-item__caption caption">
+                    <h3 class="new-films-item__title">Занесло</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+
+            <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="new-films-item__thumbnail thumbnail">
+                <a href="#" class="new-films-item__link">
+                  <img src="assets/img/films/1341151.jpg" alt="картинка" class="new-film-item__image">
+                  <div class="new-films-item__caption caption">
+                    <h3 class="new-films-item__title">Из машины</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+
+            <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="new-films-item__thumbnail thumbnail">
+                <a href="#" class="new-films-item__link">
+                  <img src="assets/img/films/1381061.jpg" alt="картинка" class="new-film-item__image">
+                  <div class="new-films-item__caption caption">
+                    <h3 class="new-films-item__title">Выхода нет</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+
+            <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="new-films-item__thumbnail thumbnail">
+                <a href="#" class="new-films-item__link">
+                  <img src="assets/img/films/1393263.jpg" alt="картинка" class="new-film-item__image">
+                  <div class="new-films-item__caption caption">
+                    <h3 class="new-films-item__title">Человек-муравей</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+
+            <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="new-films-item__thumbnail thumbnail">
+                <a href="#" class="new-films-item__link">
+                  <img src="assets/img/films/1401663.jpg" alt="картинка" class="new-film-item__image">
+                  <div class="new-films-item__caption caption">
+                    <h3 class="new-films-item__title">Марсианин</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+
+            <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="new-films-item__thumbnail thumbnail">
+                <a href="#" class="new-films-item__link">
+                  <img src="assets/img/films/1415999.jpg" alt="картинка" class="new-film-item__image">
+                  <div class="new-films-item__caption caption">
+                    <h3 class="new-films-item__title">Дочь Бога</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+
+            <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="new-films-item__thumbnail thumbnail">
+                <a href="#" class="new-films-item__link">
+                  <img src="assets/img/films/1441076.jpg" alt="картинка" class="new-film-item__image">
+                  <div class="new-films-item__caption caption">
+                    <h3 class="new-films-item__title">Пять</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+
+            <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="new-films-item__thumbnail thumbnail">
+                <a href="#" class="new-films-item__link">
+                  <img src="assets/img/films/1453229.jpg" alt="картинка" class="new-film-item__image">
+                  <div class="new-films-item__caption caption">
+                    <h3 class="new-films-item__title">Люди Икс</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+
+            <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="new-films-item__thumbnail thumbnail">
+                <a href="#" class="new-films-item__link">
+                  <img src="assets/img/films/1455536.jpg" alt="картинка" class="new-film-item__image">
+                  <div class="new-films-item__caption caption">
+                    <h3 class="new-films-item__title">Иллюзия обмана 2</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+
+            <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="new-films-item__thumbnail thumbnail">
+                <a href="#" class="new-films-item__link">
+                  <img src="assets/img/films/1263242.jpg" alt="картинка" class="new-film-item__image">
+                  <div class="new-films-item__caption caption">
+                    <h3 class="new-films-item__title">Lorem, ipsum dolor.</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+
+          </div>
+        </section>
+        <!-- MAIN-END -->
+      </main>
       <aside class="left-sidebar col-lg-3 col-md-4 col-sm-12 col-lg-pull-9 col-md-pull-8">
 
-        <div class="vertical-slider panel panel-info">
+        <div class="vertical-slider panel panel-info hidden-sm hidden-xs">
           <!-- SLIDER-BLOCK-START -->
           <div id="vertical-carousel" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
@@ -112,7 +296,7 @@
 
         </div>
 
-        <div class="site-search panel panel-info">
+        <div class="site-search panel panel-info hidden-sm hidden-xs">
           <div class="panel-heading">Поиск</div>
           <div class="panel-body">
             <form action="search">
@@ -128,7 +312,7 @@
           </div>
         </div>
 
-        <div class="user-login panel panel-info">
+        <div class="user-login panel panel-info hidden-sm hidden-xs">
           <div class="panel-heading">Вход</div>
           <div class="panel-body">
             <form action="login">
