--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@
             <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="new-films-item__thumbnail thumbnail">
                 <a href="#" class="new-films-item__link">
-                  <img src="assets/img/films/1263242.jpg" alt="картинка" class="new-film-item__image">
+                  <img src="assets/img/films/1423264.jpg" alt="картинка" class="new-film-item__image">
                   <div class="new-films-item__caption caption">
-                    <h3 class="new-films-item__title">Lorem, ipsum dolor.</h3>
+                    <h3 class="new-films-item__title">Месть от Кутюр</h3>
                   </div>
                 </a>
               </div>
