--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 <a href="#" class="new-films-item__link">
                   <img src="assets/img/films/1441076.jpg" alt="картинка" class="new-film-item__image">
                   <div class="new-films-item__caption caption">
-                    <h3 class="new-films-item__title">Пять</h3>
+                    <h3 class="new-films-item__title">5ять</h3>
                   </div>
                 </a>
               </div>
@@ -251,6 +251,223 @@
 
           </div>
         </section>
+
+        <section class="top-films">
+          <h2>ТОП за неделю</h2>
+          <div class="top-films-row row">
+
+            <article class="top-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="top-films-item__thumbnail thumbnail">
+                <a href="#" class="new-films-item__link">
+                  <img src="assets/img/films/1401663.jpg" alt="картинка" class="top-film-item__image">
+                  <div class="top-films-item__caption caption">
+                    <h3 class="top-films-item__title">Марсианин</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+            <article class="top-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="top-films-item__thumbnail thumbnail">
+                <a href="#" class="top-films-item__link">
+                  <img src="assets/img/films/1453229.jpg" alt="картинка" class="top-film-item__image">
+                  <div class="top-films-item__caption caption">
+                    <h3 class="top-films-item__title">Люди Икс</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+
+            <article class="top-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="top-films-item__thumbnail thumbnail">
+                <a href="#" class="top-films-item__link">
+                  <img src="assets/img/films/1263242.jpg" alt="картинка" class="top-film-item__image">
+                  <div class="top-films-item__caption caption">
+                    <h3 class="top-films-item__title">Люси</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+
+            <article class="top-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="top-films-item__thumbnail thumbnail">
+                <a href="#" class="top-films-item__link">
+                  <img src="assets/img/films/1266931.jpg" alt="картинка" class="top-film-item__image">
+                  <div class="top-films-item__caption caption">
+                    <h3 class="top-films-item__title">Стражи Галактики</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+
+            <article class="top-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="top-films-item__thumbnail thumbnail">
+                <a href="#" class="top-films-item__link">
+                  <img src="assets/img/films/1289488.jpg" alt="картинка" class="top-film-item__image">
+                  <div class="top-films-item__caption caption">
+                    <h3 class="top-films-item__title">Занесло</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+
+            <article class="top-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="top-films-item__thumbnail thumbnail">
+                <a href="#" class="top-films-item__link">
+                  <img src="assets/img/films/1341151.jpg" alt="картинка" class="top-film-item__image">
+                  <div class="top-films-item__caption caption">
+                    <h3 class="top-films-item__title">Из Машины</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+
+            <article class="top-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="top-films-item__thumbnail thumbnail">
+                <a href="#" class="top-films-item__link">
+                  <img src="assets/img/films/1381061.jpg" alt="картинка" class="top-film-item__image">
+                  <div class="top-films-item__caption caption">
+                    <h3 class="top-films-item__title">Выхода нет</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+
+            <article class="top-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="top-films-item__thumbnail thumbnail">
+                <a href="#" class="top-films-item__link">
+                  <img src="assets/img/films/1393263.jpg" alt="картинка" class="top-film-item__image">
+                  <div class="top-films-item__caption caption">
+                    <h3 class="top-films-item__title">Человек муравей</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+
+            <article class="top-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="top-films-item__thumbnail thumbnail">
+                <a href="#" class="top-films-item__link">
+                  <img src="assets/img/films/1415999.jpg" alt="картинка" class="top-film-item__image">
+                  <div class="top-films-item__caption caption">
+                    <h3 class="top-films-item__title">Дочь Бога</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+
+            <article class="top-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="top-films-item__thumbnail thumbnail">
+                <a href="#" class="top-films-item__link">
+                  <img src="assets/img/films/1423264.jpg" alt="картинка" class="top-film-item__image">
+                  <div class="top-films-item__caption caption">
+                    <h3 class="top-films-item__title">Месть от кутюр</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+
+            <article class="top-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="top-films-item__thumbnail thumbnail">
+                <a href="#" class="top-films-item__link">
+                  <img src="assets/img/films/1441076.jpg" alt="картинка" class="top-film-item__image">
+                  <div class="top-films-item__caption caption">
+                    <h3 class="top-films-item__title">5ять</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+
+            <article class="top-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="top-films-item__thumbnail thumbnail">
+                <a href="#" class="top-films-item__link">
+                  <img src="assets/img/films/1455536.jpg" alt="картинка" class="top-film-item__image">
+                  <div class="top-films-item__caption caption">
+                    <h3 class="top-films-item__title">Иллюзия обмана 2</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+
+          </div>
+        </section>
+
+        <section class="film-news">
+          <h2>Новости кино</h2>
+          <article class=film-news__item>
+            <h3>
+              <a href="#">Кейт Бекинсейл представила фильм "Другой мир: Войны крови"</a>
+            </h3>
+            <div class="row">
+              <div class="col-sm-4">
+                <div class="film-news__item__thumbnail thumbnail">
+                  <img class="film-news-item__image" src="assets/img/news/news-1.jpg" alt="картинка">
+                </div>
+              </div>
+              <div class="col-sm-8">
+                <p class="film-news-item__text">Кейт Бекинсейл представила в Мексике свой новый фильм "Другой мир: Войны
+                  крови". На красной дорожке актриса позировала фотографам в роскошном красном платье. В фильме речь
+                  пойдет о Селене - Воительница-вампир Селена вступает в свой последний и решающий бой между оборотнями
+                  и кланом вампиров, который предал ее. В украинских кинотеатрах картину можно увидеть с 1 декабря...
+                </p>
+                <a href="#" class="film-news-item__button btn-warning btn"> Подробней</a>
+              </div>
+            </div>
+          </article>
+
+          <article class=film-news__item>
+            <h3>
+              <a href="#">Критики Нью-Йорка выбрали лучший фильм 2016 года</a>
+            </h3>
+            <div class="row">
+              <div class="col-sm-4">
+                <div class="film-news__item__thumbnail thumbnail">
+                  <img class="film-news-item__image" src="assets/img/news/news-2.jpg" alt="картинка">
+                </div>
+              </div>
+              <div class="col-sm-8">
+                <p class="film-news-item__text">Им стал мюзикл "Ла-Ла Ленд", который снял режиссер Дэмьен Шазелл. Лучшим
+                  актером года был признан Кейси Аффлек, сыгравший в картине "Манчестер у моря", а в аналогичной женской
+                  категории победа была присуждена Изабель Юппер снимавшаяся в фильме "Она". Лучшей актрисой второго
+                  плана названа Мишель Уильямс, сыгравшая в драме "Некоторые женщины", а лучшим актером второго плана -
+                  Махершалалхашбаз Али за роль в картине "Лунный свет"...</p>
+                <a href="#" class="film-news-item__button btn-warning btn"> Подробней</a>
+              </div>
+            </div>
+          </article>
+
+          <article class=film-news__item>
+            <h3>
+              <a href="#">Крис Прэтт и Дженнифер Лоуренс представили "Пассажиров" в Париже</a>
+            </h3>
+            <div class="row">
+              <div class="col-sm-4">
+                <div class="film-news__item__thumbnail thumbnail">
+                  <img class="film-news-item__image" src="assets/img/news/news-3.jpg" alt="картинка">
+                </div>
+              </div>
+              <div class="col-sm-8">
+                <p class="film-news-item__text">Хотя до премьеры "Пассажиров" остается еще почти месяц, промо-тур в
+                  поддержку нового фильма уже начался: Крис Прэтт и Дженнифер Лоуренс, исполнившие в фильме главные
+                  роли, представили "Пассажиров" в рамках фотоколла в Париже. В кинотеатрах "Пассажиры" появятся под
+                  занавес 2016 года – 22 декабря...</p>
+                <a href="#" class="film-news-item__button btn-warning btn"> Подробней</a>
+              </div>
+            </div>
+          </article>
+
+        </section>
+
         <!-- MAIN-END -->
       </main>
       <aside class="left-sidebar col-lg-3 col-md-4 col-sm-12 col-lg-pull-9 col-md-pull-8">
@@ -463,6 +680,57 @@
       </aside>
     </div>
   </div>
+
+  <footer class="footer container-fluid">
+    <div class="row">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3 col-xs-6">
+            <h4 class="footer-title">Lorem ipsum dolor sit.</h4>
+            <p class="footer-text"><a href="#">Lorem ipsum dolor.</a></p>
+            <p class="footer-text"><a href="#">Delectus, labore, incidunt.</a></p>
+            <p class="footer-text"><a href="#">Eos neque, eius.</a></p>
+            <p class="footer-text"><a href="#">Minus, omnis vel.</a></p>
+          </div>
+          <div class="col-md-3 col-xs-6">
+            <h4 class="footer-title">Voluptatem, commodi, at.</h4>
+            <p class="footer-text"><a href="#">Lorem ipsum dolor.</a></p>
+            <p class="footer-text"><a href="#">Delectus, labore, incidunt.</a></p>
+            <p class="footer-text"><a href="#">Eos neque, eius.</a></p>
+            <p class="footer-text"><a href="#">Minus, omnis vel.</a></p>
+            <p class="footer-text"><a href="#">Aspernatur, fugiat, possimus!</a></p>
+          </div>
+          <div class="col-md-3 col-xs-6">
+            <h4 class="footer-title">Sed, ducimus perspiciatis.</h4>
+            <p class="footer-text"><a href="#">Lorem ipsum dolor.</a></p>
+            <p class="footer-text"><a href="#">Delectus, labore, incidunt.</a></p>
+            <p class="footer-text"><a href="#">Eos neque, eius.</a></p>
+            <p class="footer-text"><a href="#">Minus, omnis vel.</a></p>
+          </div>
+          <div class="col-md-3 col-xs-6">
+            <h4 class="footer-title">Reiciendis, minima, a?</h4>
+            <p class="footer-text"><a href="#">Lorem ipsum dolor.</a></p>
+            <p class="footer-text"><a href="#">Delectus, labore, incidunt.</a></p>
+            <p class="footer-text"><a href="#">Eos neque, eius.</a></p>
+            <p class="footer-text"><a href="#">Minus, omnis vel.</a></p>
+            <p class="footer-text"><a href="#">Aspernatur, fugiat, possimus!</a></p>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <div class="row footer-bottom-title">
+            <div class="col-xs-12">
+              <a href="#">Учебный шаблон Bootstrap v3.4.1. Разработка - Андрей Фоменко</a>
+            </div>
+          </div>
+          <div class="row">
+              <div class="col-xs-12 footer-bottom-info">
+                <a href="#">выполнил: студент группы курса Front-End, Евгений Байда</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  </footer>
 
   <script src="libs/jquery/dist/jquery.min.js"></script>
   <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
