--- a/page.html
+++ b/page.html
@@ -183,13 +183,13 @@
                     <div class="comments-films-row row">
                         <form class="comments-films-form">
                             <div class="comments-films-form__inner">
-                                <input class="form-control input-lg" type="name" placeholder="Ваше имя">
+                                <input class="form-control input-lg input-my-style" type="text" placeholder="Ваше имя">
                             </div>
                             <div class="comments-films-form__inner">
-                                <input class="form-control input-lg" type="email" placeholder="Укажите Email">
+                                <input class="form-control input-lg input-my-style" type="email" placeholder="Укажите Email">
                             </div>
                             <div class="comments-films-form__inner">
-                                <textarea class="form-control" rows="10" type="text" placeholder="Напишите свой комментарий здесь..."></textarea>
+                                <textarea class="form-control" rows="10" placeholder="Напишите свой комментарий здесь..."></textarea>
                             </div>
                             <div class="comments-films-form__inner comments-films__lastInner">
                             <button type="button" class="btn btn-warning btn-lg">Отправить</button>
