--- a/page.html
+++ b/page.html
@@ -107,7 +107,7 @@
                 <section class="about-films">
                     <h1>Иллюзия обмана 2</h1>
                     <div class="about-films-row row myiframe">
-                        <div class="embed-responsive embed-responsive-16by9 containerappend ">
+                        <div class="embed-responsive embed-responsive-16by9 containerappend iframe_wrapper">
                             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/47DzVAIzSQI"
                                 allowfullscreen> </iframe>
                         </div>
